# Openfisca_Driver_Revive

./: GNU AFFERO GENERAL PUBLIC LICENSE  LICENSE  README.md
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/.github/workflows/: ci.yml
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/Postman/: MVOHWR - Is Covered under MVO Regulation.postman_collection.json
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/app/: calculator.py  server.py  web_search.py
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/app/static/: app.js  index.html  start-here.html  styles.css
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/openfisca_canada_mvohwr/: structure.json
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/openfisca_canada_mvohwr/tests/covered_by_mvohwr/: covered_by_mvohwr.yaml
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/openfisca_canada_mvohwr/variables/calculate_overtime/: calculate_overtime_daily.py
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/openfisca_canada_mvohwr/variables/covered_by_mvohwr/: covered_by_mvohwr.py
Openfisca-Canada-codex-revive-github-package-for-openfisca-standards/tests_app/: test_calculator.py  test_daily_breakdown_api.py  test_server_chat.py  test_server_startup.py
(+1 files in other folders)
